@@ -1,0 +1,16 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace MCForge.Plugins
+{
+    public enum Events
+    {
+        Command,
+        Chat,
+        BlockChange,
+        LevelLoad,
+        LevelSave
+    }
+}
